Change url to cloudimage, to use quotes

--- a/src/components/Aside/Aside.scss
+++ b/src/components/Aside/Aside.scss
@@ -123,7 +123,7 @@
     &::after{
       position: absolute;
       content: "";
-      background-image: url(/figma/cloud.png);
+      background-image: "url(figma/cloud.png)";
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
